<resources>
    <string name="app_name">MyDict</string>
    <string name="btn_english">Английский</string>
    <string name="btn_deutsch">Немецкий</string>
    <string name="btn_japanese">Японский</string>
    <string name="btn_add_word">Добавить слово</string>
    <string name="hint_word">Слово:</string>
    <string name="hint_comment">Комментарий:</string>
    <string name="hint_translation">Перевод:</string>
    <string name="title_add_word">Добавить слово</string>
    <string name="title_edit_word">Изменить слово</string>
    <string name="title_auth">Авторизация</string>
    <string name="btn_save">Сохранить</string>
    <string name="btn_delete">Удалить</string>
    <string name="btn_save_data">Выгрузить</string>
    <string name="btn_load_data">Загрузить</string>
    <string name="toast_save_data_success">Выгружено успешно</string>
    <string name="toast_some_error">Ошибка</string>
    <string name="toast_load_data_success">Загружено успешно</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="question_delete_word">Удалить запись?</string>
    <string name="title_dict">Словарь:\u0020</string>
    <string name="title_testing">Тестирование:\u0020</string>
    <string name="title_testing2">Тестирование 2:\u0020</string>
    <string name="toast_minimum_word_count">В словаре должно быть хотя бы 4 слова</string>
    <string name="toast_at_least_one_word">В словаре должно быть хотя бы одно слово</string>
    <string name="btn_testing">Тест 1</string>
    <string name="btn_testing2">Тест 2</string>
    <string name="btn_next_question">Дальше</string>
    <string name="btn_hint">Подсказка</string>
    <string name="word_already_exists">Слово уже есть в словаре</string>
    <string name="btn_auth">Авторизация</string>
    <string name="btn_save_auth">Сохранить</string>
    <string name="btn_sign_in">Войти</string>
    <string name="btn_sign_up">Зарегистрироваться</string>
    <string name="btn_save_firestore">Выгрузить Firestore</string>
    <string name="btn_load_firestore">Загрузить Firestore</string>
    <string name="toast_need_login">Необходима авторизация</string>
    <string name="toast_fill_all_fields">Заполните все поля</string>
    <string name="toast_sign_in_success">Авторизация успешна</string>
    <string name="toast_sign_in_error">Ошибка авторизации</string>
    <string name="toast_sign_up_success">Регистрация успешна</string>
    <string name="toast_sign_up_error">Ошибка регистрации</string>
    <string name="hint_e_mail">E-mail</string>
    <string name="hint_password">Пароль</string>
    <string name="toast_fill_word_and_translation">Заполните слово и перевод</string>
    <string name="question_load_firestore">Загрузить из Firestore?</string>
</resources>