<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="jatx.mydict.ui.dict.DictViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.dict.DictFragment">

        <FrameLayout
            android:id="@+id/frame_layout_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={viewmodel.searchText}" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal">
                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/black"/>

                    <TextView
                        android:id="@+id/tv_original_header"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="start|center_vertical"
                        android:paddingStart="4dp"
                        android:background="@color/yellow"
                        android:textColor="@color/black"
                        android:text="@string/hint_word"
                        android:onClick="@{()->viewmodel.sortByOriginal()}"
                        />

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/black"/>

                    <TextView
                        android:id="@+id/tv_translation_header"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"
                        android:gravity="start|center_vertical"
                        android:paddingStart="4dp"
                        android:background="@color/blue"
                        android:textColor="@color/black"
                        android:text="@string/hint_translation"
                        android:onClick="@{()->viewmodel.sortByTranslation()}"
                        />

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/black"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/black"/>
            </LinearLayout>
        </FrameLayout>

        <Button
            android:id="@+id/btn_add_word"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_add_word"
            android:textSize="12sp"
            android:onClick="@{()->viewmodel.addWord()}"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_testing"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_words"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:items="@{viewmodel.words}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_layout_sort"
            />

        <Button
            android:id="@+id/btn_testing"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_testing"
            android:textSize="12sp"
            android:onClick="@{()->viewmodel.openTesting()}"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_testing2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_add_word" />

        <Button
            android:id="@+id/btn_testing2"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_testing2"
            android:textSize="12sp"
            android:onClick="@{()->viewmodel.openTesting2()}"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_testing" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>